# algorithm

src/: CMakeLists.txt  main.cpp
src/common/: common_func.cpp  common_func.h
